infra/k8sw/api-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: api-gateway
    template:
        metadata:
            labels:
                app: api-gateway
        spec:
            containers:
                - name: api-gateway
                  image: pomper/api-gateway
---
apiVersion: v1
kind: Service
metadata:
    name: api-gateway-srv
spec:
    selector:
        app: api-gateway
    ports:
        - name: api-gateway
          protocol: TCP
          port: 3000
          targetPort: 3000
