infra/k8sw/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth-mongo
    template:
        metadata:
            labels:
                app: auth-mongo
        spec:
            containers:
                - name: auth-mongo
                  image: mongo
                  volumeMounts:
                      - name: mongo-data
                        mountPath: /data/db
            volumes:
                - name: mongo-data
                  persistentVolumeClaim:
                      claimName: auth-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: auth-mongo-srv
spec:
    selector:
        app: auth-mongo
    ports:
        - name: db
          protocol: TCP
          port: 27017
          targetPort: 27017
