infra/k8sw/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nats-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nats
    template:
        metadata:
            labels:
                app: nats
        spec:
            containers:
                - name: nats
                  image: nats:alpine
                  ports:
                      - containerPort: 4222
                  readinessProbe:
                      tcpSocket:
                          port: 4222
                      initialDelaySeconds: 5
                      periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
    name: nats-srv
spec:
    selector:
        app: nats
    ports:
        - name: nats
          protocol: TCP
          port: 4222
          targetPort: 4222
