infra/k8sw/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: splaika.com
          http:
              paths:
                  - path: /api/v1/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: api-gateway-srv
                            port:
                                number: 3000
